--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "@faker-js/faker": "^5.5.3",
     "cypress": "^9.6.1",
-    "pg": "^8.7.3"
+    "moment": "^2.29.4",
+    "pg": "^8.7.3",
+    "underscore": "^1.13.4"
   }
 }
